<?xml version="1.0"?>
<package format="3">
  <name>gazebo_ros_link_attacher</name>
  <version>0.0.0</version>
  <description>The gazebo_ros_link_attacher package lets you attach
    by a virtual joint temporarily two links in a Gazebo simulation.</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>


  <license>BSD</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>python-transforms3d-pip</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
